--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "google-auth-library": "^5.9.2"
+    "google-auth-library": "^5.9.2",
+    "human-readable-ids": "^1.0.4"
   }
 }
