--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mdbootstrap": "^4.12.0",
+    "moment": "^2.24.0"
   }
 }
